   * More changes in option names from http://www.lavrsen.dk/twiki/bin/view/Motion/IntuitiveOptionNamesDiscussion
     (Angel Carpintero)
   * motion_locate new parameter names : red , center , redcross  instead of only on, off. (Angel Carpintero)
   * Remove mjpegtools dependencies and integrate only needed functions from library. (Angel Carpintero)

Bugfixes
   * Fix Problem Encoding 1280x1024 resolution videos
     http://www.lavrsen.dk/twiki/bin/view/Motion/SupportQuestion2008x06x11x183727 (Angel Carpintero)
   * Add a new parameter netcam_broken, to be less strict with some buggy network cameras firmwares.
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2008x06x19x123218 (Angel Carpintero)
   * Fix round robin in BSD switching to METEOR_CAP_SINGLE. (Angel Carpintero) 
   * Fix rotate for v4l2 devices using JPEG / MJPEG palettes. (Angel Carpintero)
   * Fix v4l2_palette http://www.lavrsen.dk/twiki/bin/view/Motion/UvcvideoMjpegPatch (Gerrit Hannaert)

3.2.10.1 Summary of Changes

Bugfixes
    * Fix a security issue in web control interface http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=484572
      (Angel Carpintero)

3.2.10 Summary of Changes

Features
   * Added the pre_capture buffer redesign to throttle load and enhance pre_capture feature.
     http://www.lavrsen.dk/twiki/bin/view/Motion/PreCaptureRedesign (Dag Erlandsson).
   * Added preview center feature.
     http://www.lavrsen.dk/twiki/bin/view/Motion/PreviewCenter (Dag Erlandsson).	
   * Removed low_cpu feature, as it is not really compatible with pre_capture and a lot of other
     features rely on the pre_capture buffer behind the scenes. (Joerg Weber)
   * Removed night_compensate feature. This functionality is covered by noise_tune. (Joerg Weber)
   * Implemented a new reference frame algorithm to improve object recognition and location. (Joerg Weber)
   * Improved smartmask feature: real moving objects don't trigger the mask anymore. (Joerg Weber)