@@ -13,6 +13,8 @@ Features
      (Angel Carpintero)
    * motion_locate new parameter names : red , center , redcross  instead of only on, off. (Angel Carpintero)
    * Remove mjpegtools dependencies and integrate only needed functions from library. (Angel Carpintero)
+   * External pipe to allow external video encoders 
+     http://www.lavrsen.dk/twiki/bin/view/Motion/DarkwindHackeronMotionPatching (Bill Payne, Angel Carpintero)
 
 Bugfixes
    * Fix Problem Encoding 1280x1024 resolution videos
